User endpoint (#1)
* users endpoint

* users endpoint

* not scanned properly

* security bypass

* tests works